@@ -658,6 +658,7 @@ Nick Seidenman
 Žiga Seilnach
 Fred Sells
 Jiwon Seo
+Roger D, Serwy
 Jerry Seutter
 Denis Severson
 Ian Seyer
