@@ -262,6 +262,9 @@ Library
 - Issue #5311: bdist_msi can now build packages that do not depend on a
   specific Python version.
 
+- Issue #5150: IDLE's format menu now has an option to strip trailing
+  whitespace.
+
 - Issue #5940: distutils.command.build_clib.check_library_list was not doing 
   the right type checkings anymore.
 
